# metalpy

./: .pre-commit-config.yaml  README.md  README.zh_CN.md  pyproject.toml  readme.md  readme.zh_CN.md
buildtools/git_hooks/: check_gitmoji.py
docs/changelog/: 0.0.5-changelog.md
docs/release/: 0.0.5-notes.md
examples/forward/: main_forward.py
